# cargo-structure

./: Cargo.toml  LICENSE  README.md
src/: main.rs
