[package]
name = "cargo-structure"
version = "0.1.1"
authors = ["Ramon Brand"]
description = "A simple tool for analyzing the structure of a cargo project."
keywords = ["architecture", "dependencies", "structure"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
repository = "https://github.com/ramon54321/cargo-structure"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
toml = "0.4.2"
walkdir = "2"
dot-writer = "0.1.2"
clap = { version = "3.1.10", features = ["derive", "cargo"] }

